@@ -46,7 +46,6 @@ import com.android.internal.R;
 import com.android.media.flags.Flags;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -196,16 +195,13 @@ class LegacyBluetoothRouteController implements BluetoothRouteController {
         }
     }
 
-    @NonNull
+    @Nullable
     @Override
-    public List<MediaRoute2Info> getSelectedRoutes() {
+    public MediaRoute2Info getSelectedRoute() {
         // For now, active routes can be multiple only when a pair of hearing aid devices is active.
         // Let the first active device represent them.
-        return (mActiveRoutes.isEmpty()
-                ? Collections.emptyList()
-                : List.of(mActiveRoutes.getFirst().mRoute));
+        return (mActiveRoutes.isEmpty() ? null : mActiveRoutes.get(0).mRoute);
     }
-
 
     @NonNull
     @Override
@@ -223,8 +219,8 @@ class LegacyBluetoothRouteController implements BluetoothRouteController {
         List<MediaRoute2Info> routes = new ArrayList<>();
         List<String> routeIds = new ArrayList<>();
 
-        List<MediaRoute2Info> selectedRoutes = getSelectedRoutes();
-        for (MediaRoute2Info selectedRoute : selectedRoutes) {
+        MediaRoute2Info selectedRoute = getSelectedRoute();
+        if (selectedRoute != null) {
             routes.add(selectedRoute);
             routeIds.add(selectedRoute.getId());
         }
